tests/models/enum/named/i32/pass/le.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(le = 2)]
        value: i32
    },
}
fn main() {}
